fix a rarely seen bug (fault) arising when cancellation cause a term
to completely vanish.

20211001
  getstub.c in both solvers.tgz and solvers2.tgz:  arrange for
", liccheck(yyyymmdd)" to appear in the output produced by
show_version_ASL(oi) when getstub.c is compiled with
-DLICCHECKVERSION=yyyymmdd .

20211029
  readsol.c in both solvers.tgz and solvers2.tgz: fix a bug with
binary .sol files and no constraints.

20211109
  func_add.c in both solvers.tgz and solvers2.tgz:  quietly ignore
inappropriate addfunc_ASL calls unless compiled with
-DCOMPLAIN_AT_BAD_FTYPE.  This allows AMPL and solvers to use a .dll
that includes some functions that can only be used in an AMPL session
-- the solvers quietly ignore them.

20220520
  Quietly reduce absurdly large precisions in printf formats.  For
example, "%.410g" faulted.  Now it works and "%.500g" is quietly
reduced to "%.415g".
  Fix a small performance bug in misc.c -- only need to invoke
zerograd_chk once.

20221103
  mqpcheckv.c, nqpcheck.c in both solvers.tgz and solvers2.tgz:  fix a
fault that arose under when there are rare cancellations.  Example:

	var x >= 1; var u; var w;
	minimize o: (w + (1 - w))*(x - u) + u;	# really just x

20221115
  misc.c in both solvers.tgz and solvers2.tgz:  recant change of
20220520, which had removed a sometimes needed call.

20230310
  fgh_read.c: a tweak that only matters to pedants.
  suf_sos.c: adjust nranges (= asl->i.nranges_) when SOS2 constraints
are handled.

20230328
  pfghread.c in solvers2.tgz:  fix a bug in computing derivatives of
piecewise-linear terms.
  pshvprod.c in solvers2.tgz:  fix a bug in computing Hessians
involving piecewise-linear terms.

20230329
  jac0dim.c:  change return_nofile (= asl->i.return_nofile_) so
return_nofile = 0 or 1 work as before and (return_nofile & 2) causes
a quiet return of 0 when the given file does not have a valid .nl
header (the first 10 lines).  The default return_nofile is still 0.